# surge-configuration-manager

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  UI Design.md  eslint.config.js  package.json  pnpm-lock.yaml  ui_design.pen
.claude/commands/: new-requirement.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
assets/icon-sources/: make_icon.py  surge-app-icon.icns
docs/: user-guide-2026-03-30.md
docs/specs/: 2026-03-30-cloud-sync-optimization.md  2026-03-30-config-cloud-sync.md  2026-03-30-i18n-architecture-refactor.md  2026-03-30-version-rollback.md  2026-03-30-设置菜单拆分与增强.md  TEMPLATE.md
docs/superpowers/plans/: 2026-03-29-test-harness.md  2026-03-30-cloud-sync-directory-structure.md  2026-03-30-cloud-sync-闭环优化.md  2026-03-30-config-cloud-sync.md  2026-03-30-i18n-architecture-refactor.md  2026-03-30-version-rollback.md  2026-03-30-设置菜单拆分与增强.md
scripts/: check-i18n.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloud_sync.rs  commands.rs  generator.rs  lib.rs  main.rs  models.rs  store.rs  subscription.rs
src/__tests__/pages/: Output.test.tsx  (+4 more)
src/components/: CloudSyncConflictDialog.tsx  ConfirmDialog.tsx  ConfirmRestoreDialog.tsx  Sidebar.tsx
src/lib/: api.ts
src/locales/: en.json  zh.json
src/pages/: CloudSyncPage.tsx  ExtraNodes.tsx  HostPage.tsx  HttpListenPage.tsx  MitmPage.tsx  Output.tsx  Rules.tsx  Settings.tsx  Subscriptions.tsx  UrlRewritePage.tsx
src/test/: setup.ts
src/types/: index.ts
(+20 files in other folders)
