[package]
name = "surge-configuration-manager"
version = "0.1.0"
description = "Surge Configuration Manager for macOS"
authors = ["guo"]
edition = "2021"

[lib]
name = "scm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
