[package]
name = "surge-configuration-manager"
version = "0.1.0"
description = "Surge Configuration Manager for macOS"
authors = ["guo"]
edition = "2021"

[lib]
name = "scm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "socks"], default-features = false }
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2"
base64 = "0.22"
sha2 = "0.10"
